登陆界面美化
v1

--- a/polls/templates/blog.html
+++ b/polls/templates/blog.html
@@ -94,8 +94,8 @@ function HTMLDecode(text) {
 
 function showablog(blogid,blogtitle)
 {
-	alert(blogid)
-	alert(blogtitle)
+	//alert(blogid)
+	//alert(blogtitle)
 	window.location.href='/showblog/?blogid='+blogid; 
 }
 
