--- a/polls/templates/blog.html
+++ b/polls/templates/blog.html
@@ -103,6 +103,10 @@ function showablog(blogid,blogtitle)
 	  
 </script>
 
+<style>
+body{background-color:#EFEFEF}
+</style>
+
 </head>
 
 <body>
@@ -154,18 +158,45 @@ function showablog(blogid,blogtitle)
 </div>
 </div>
 
+
+    <!-- <nav class="main-navigation"> -->
+        <!-- <div class="container"> -->
+            <!-- <div class="row"> -->
+                <!-- <div class="col-sm-12"> -->
+                    <!-- <div class="navbar-header"> -->
+                        <!-- <span class="nav-toggle-button collapsed" data-toggle="collapse" data-target="#main-menu"> -->
+                        <!-- <span class="sr-only">Toggle navigation</span> -->
+                        <!-- <i class="fa fa-bars"></i> -->
+                        <!-- </span> -->
+                    <!-- </div> -->
+                    <!-- <div class="collapse navbar-collapse" id="main-menu"> -->
+                        <!-- <ul class="menu"> -->
+        <!-- <li class="nav-current" role="presentation"><a href="/">首页</a></li> -->
+        <!-- <li  role="presentation"><a href="http://wenda.ghostchina.com">论坛</a></li> -->
+        <!-- <li  role="presentation"><a href="/ghost-cheat-sheet/">快捷手册</a></li> -->
+        <!-- <li  role="presentation"><a href="http://docs.ghostchina.com/zh/">中文文档</a></li> -->
+        <!-- <li  role="presentation"><a href="/download/">下载</a></li> -->
+        <!-- <li  role="presentation"><a href="/about/">关于</a></li> -->
+<!-- </ul>    -->
+                    <!-- </div> -->
+                <!-- </div> -->
+            <!-- </div> -->
+        <!-- </div> -->
+    <!-- </nav> -->
+
+
 <div class="container" >
 	<p></p>
-	
-	<ul class="nav  nav-tabs justify-content-left">
+	<!-- <div class="alert alert-light"> -->
+	<ul class="nav  nav-tabs justify-content-left" style="border-bottom:0px">
 		<li class="nav-item">
-			<a class="nav-link active" href="/blog/?pg=1&searchval=">首页</a>
+			<a class="nav-link " href="/blog/?pg=1&searchval=">首页</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="/didi">论坛</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="/publish">发布</a>
+			<a class="nav-link "  href="/publish">发布</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="#">下载</a>
@@ -173,28 +204,30 @@ function showablog(blogid,blogtitle)
 		<li class="nav-item">
 			<a class="nav-link" href="#">关于</a>
 		</li>
-
-		<div class="form-inline " style="float:right;">
+		
+		<div class="form-inline justify-content-right" style="float:right;">
 			{% csrf_token %}
-			<input class="form-control" type="text" placeholder="Search" id="searchblogcondition" name="searchblogcondition">
+			<input class="form-control" type="text" placeholder="Search" id="searchblogcondition" name="searchblogcondition" style="margin-right:2px">
 			<button class="btn btn-default" type="submit" id="searchblog">Search</button>
 		</div>
 	</ul>
+	
+	<!-- </div> -->
 
 </div>
 
-<div class="container" id="content">
+<div class="container" id="content" style="margin-top:5px">
 	<div class="row">
 		<div class="col-md-9">
-			<div class="alert alert-light">
+			<!-- <div class="alert alert-light"> -->
 			
-			</div>
+			<!-- </div> -->
 			
 			{% for blog in Blogs %}
-			<div class="alert alert-secondary">
+			<div class="alert alert-light">
 				<h3 class="text-center">{{blog.blogtitle}}</h3>
 				<h6 class="text-center"><small>作者：<span class="text-info">大智若愚</span> • {{blog.blogdate|date:"Y-m-d H:i:s"}}</small></h6>
-				<div  class="alert alert-secondary" style="border:0px;height:180px;overflow:hidden" id="testblog111" >
+				<div  class="alert alert-light" style="border:0px;height:180px;overflow:hidden" id="testblog111" >
 						<p class="{{blog.id}}" ></p>
 						<script>
 							$(function(){
@@ -212,10 +245,10 @@ function showablog(blogid,blogtitle)
 			
 		</div>
 		<div class="col-md-3">
-			<div class="alert alert-light">
+			<!-- <div class="alert alert-light"> -->
 			
-			</div>
-			<div class="alert alert-secondary">
+			<!-- </div> -->
+			<div class="alert alert-light">
 			    <h4 class="title">导航</h4>
 				<nav class="navbar">
 				  <!-- Links -->
@@ -234,7 +267,7 @@ function showablog(blogid,blogtitle)
 			
 			</div>
 			
-			<div class="alert alert-secondary">
+			<div class="alert alert-light">
 				<!-- start tag cloud widget -->
 				<div class="row">
 					<h4 class="title">标签云</h4>
