--- a/polls/templates/report.html
+++ b/polls/templates/report.html
@@ -10,7 +10,13 @@
 <link rel="stylesheet" href="/static/thirdparty/monokai_sublime.min.css">
 <link href="/static/thirdparty/magnific-popup.min.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- <style> -->
+<!-- a:visited{color:#343a40} -->
+<!-- </style> -->
+
 <script>
+
 
 <!-- {% if request.session.username %}   -->
 <!-- {% else %}   -->
@@ -95,6 +101,9 @@ function HTMLDecode(text) {
 
 <body>
 
+				
+				
+				
 <!-- 轮播图开始 -->
 <div class="container">
 <div class="row">
@@ -188,7 +197,7 @@ function HTMLDecode(text) {
 				<nav class="navbar">
 				  <ul class="navbar-nav">
 					<li class="nav-item">
-					  <h5><a class="nav-link" href="#">35KV</a></h5>
+					  <h5><a class="nav-link " href="#">35KV</a></h5>
 					</li>
 					<li class="nav-item">
 					  <h5><a class="nav-link" href="#">10KV</a></h5>
@@ -225,13 +234,13 @@ function HTMLDecode(text) {
 				  <th scope="col" class="text-muted" style="border-top:0px"><h3><span class="badge badge-light">用&nbsp;&nbsp;户</span></h3></th>
 				  <th scope="col" class="text-muted" style="border-top:0px"><h3><span class="badge badge-light">信&nbsp;&nbsp;息</span></h3></th>
 				  <th scope="col" class="text-muted" style="border-top:0px"><h3><span class="badge badge-light">最&nbsp;后&nbsp;上&nbsp;传</span></h3></th>
-				  <th scope="col" class="text-muted" style="border-top:0px"><h3><span class="badge badge-light">操&nbsp;&nbsp;作</span></h3></th>
+				  <th scope="col" class="text-muted" style="border-top:0px"><h3><span class="badge badge-light">操&nbsp;&nbsp;作</span><button type="button" class="btn btn-outline-success btn-sm form-inline" data-toggle="modal" data-target="#myModal">新增</button></h3></th>
 				</tr>
 			  </thead>
 			  <tbody>
 				
 				
-				<tr class="table-active">
+				<tr class="table-success">
 				  <th scope="row" class="text-info">配电运维报告</th>
 				  <td>zhaobin</td>
 				  <td>每日巡检</td>
@@ -243,63 +252,63 @@ function HTMLDecode(text) {
 				  <td>chenggeng</td>
 				  <td>紧急事故</td>
 				  <td>2018-04-17 20:31:36</td>
-				  <td>Column content</td>
+				  <td><button type="button" class="btn btn-outline-info btn-sm">下载</button><button type="button" class="btn btn-outline-info btn-sm">上传</button><button type="button" class="btn btn-outline-info btn-sm">日志</button></td>
 				</tr>
-				<tr class="table-active">
+				<tr class="table-success">
 				  <th scope="row">配电运维报告</th>
 				  <td>Column content</td>
 				  <td>Column content</td>
 				  <td>2018-04-17 20:31:36</td>
-				  <td>Column content</td>
-				</tr>
-				<tr class="table-default">
-				  <th scope="row">配电运维报告</th>
-				  <td>Column content</td>
-				  <td>Column content</td>
-				  <td>2018-04-17 20:31:36</td>
-				  <td>Column content</td>
-				</tr>
-				<tr class="table-active">
-				  <th scope="row">配电运维报告</th>
-				  <td>Column content</td>
-				  <td>Column content</td>
-				  <td>2018-04-17 20:31:36</td>
-				  <td>Column content</td>
+				  <td><button type="button" class="btn btn-outline-info btn-sm">下载</button><button type="button" class="btn btn-outline-info btn-sm">上传</button><button type="button" class="btn btn-outline-info btn-sm">日志</button></td>
 				</tr>
 				<tr class="table-default">
 				  <th scope="row">配电运维报告</th>
 				  <td>Column content</td>
 				  <td>Column content</td>
 				  <td>2018-04-17 20:31:36</td>
-				  <td>Column content</td>
+				  <td><button type="button" class="btn btn-outline-info btn-sm">下载</button><button type="button" class="btn btn-outline-info btn-sm">上传</button><button type="button" class="btn btn-outline-info btn-sm">日志</button></td>
 				</tr>
-				<tr class="table-active">
+				<tr class="table-success">
 				  <th scope="row">配电运维报告</th>
 				  <td>Column content</td>
 				  <td>Column content</td>
 				  <td>2018-04-17 20:31:36</td>
-				  <td>Column content</td>
-				</tr>
-				<tr class="table-default">
-				  <th scope="row">配电运维报告</th>
-				  <td>Column content</td>
-				  <td>Column content</td>
-				  <td>2018-04-17 20:31:36</td>
-				  <td>Column content</td>
-				</tr>
-				<tr class="table-active">
-				  <th scope="row">配电运维报告</th>
-				  <td>Column content</td>
-				  <td>Column content</td>
-				  <td>2018-04-17 20:31:36</td>
-				  <td>Column content</td>
+				  <td><button type="button" class="btn btn-outline-info btn-sm">下载</button><button type="button" class="btn btn-outline-info btn-sm">上传</button><button type="button" class="btn btn-outline-info btn-sm">日志</button></td>
 				</tr>
 				<tr class="table-default">
 				  <th scope="row">配电运维报告</th>
 				  <td>Column content</td>
 				  <td>Column content</td>
 				  <td>2018-04-17 20:31:36</td>
+				  <td><button type="button" class="btn btn-outline-info btn-sm">下载</button><button type="button" class="btn btn-outline-info btn-sm">上传</button><button type="button" class="btn btn-outline-info btn-sm">日志</button></td>
+				</tr>
+				<tr class="table-success">
+				  <th scope="row">配电运维报告</th>
 				  <td>Column content</td>
+				  <td>Column content</td>
+				  <td>2018-04-17 20:31:36</td>
+				  <td><button type="button" class="btn btn-outline-info btn-sm">下载</button><button type="button" class="btn btn-outline-info btn-sm">上传</button><button type="button" class="btn btn-outline-info btn-sm">日志</button></td>
+				</tr>
+				<tr class="table-default">
+				  <th scope="row">配电运维报告</th>
+				  <td>Column content</td>
+				  <td>Column content</td>
+				  <td>2018-04-17 20:31:36</td>
+				  <td><button type="button" class="btn btn-outline-info btn-sm">下载</button><button type="button" class="btn btn-outline-info btn-sm">上传</button><button type="button" class="btn btn-outline-info btn-sm">日志</button></td>
+				</tr>
+				<tr class="table-success">
+				  <th scope="row">配电运维报告</th>
+				  <td>Column content</td>
+				  <td>Column content</td>
+				  <td>2018-04-17 20:31:36</td>
+				  <td><button type="button" class="btn btn-outline-info btn-sm">下载</button><button type="button" class="btn btn-outline-info btn-sm">上传</button><button type="button" class="btn btn-outline-info btn-sm">日志</button></td>
+				</tr>
+				<tr class="table-default">
+				  <th scope="row">配电运维报告</th>
+				  <td>Column content</td>
+				  <td>Column content</td>
+				  <td>2018-04-17 20:31:36</td>
+				  <td><button type="button" class="btn btn-outline-info btn-sm">下载</button><button type="button" class="btn btn-outline-info btn-sm">上传</button><button type="button" class="btn btn-outline-info btn-sm">日志</button></td>
 				</tr>
 			  </tbody>
 			</table> 
@@ -308,6 +317,115 @@ function HTMLDecode(text) {
 	</div>
 </div>
 
+
+
+<!-- 模态框begin -->
+<div class="modal fade" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+ 
+      <!-- 模态框头部 -->
+      <div class="modal-header">
+        <h4 class="modal-title">上传报告</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+ 
+      <!-- 模态框主体 -->
+      <div class="modal-body">
+	  <form  action="/blog/?pg=1&searchval=" method="post"  enctype="multipart/form-data">
+        <fieldset form>
+		  <!-- <legend>Custom forms</legend> -->
+		  
+		  <div class="form-group">
+			<div class="custom-control custom-radio">
+			  <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input" checked="">
+			  <label class="custom-control-label" for="customRadio1">覆盖文件</label>
+			</div>
+			<div class="custom-control custom-radio">
+			  <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
+			  <label class="custom-control-label" for="customRadio2">保存副本</label>
+			</div>
+			
+		  </div>
+		  <div class="form-group">
+			<div class="custom-control custom-checkbox">
+			  <input type="checkbox" class="custom-control-input" id="customCheck1" checked="">
+			  <label class="custom-control-label" for="customCheck1">其他人只读权限</label>
+			</div>
+		  </div>
+		  <div class="form-group">
+			<select class="custom-select">
+			  <option selected="">报告类型</option>
+			  <option value="1">日常巡检</option>
+			  <option value="2">紧急事故</option>
+			  <option value="3">改造需求</option>
+			</select>
+		  </div>
+		  <div class="form-group">
+			<div class="input-group mb-3">
+			  <div class="custom-file">
+								
+				<input id="reportfile" type="file" style="display:none">  
+				<div class="input-append form-inline">  
+					<input id="photoCover" class="form-control input-large" type="text" style="height:30px;"> 
+					<a class="btn btn-outline-info btn-sm" onclick="$('input[id=reportfile]').click();">Browse</a> 
+					<a class="btn btn-outline-info btn-sm" id="uploadreport">Upload</a> 
+				</div>  
+				   
+				<script type="text/javascript">  
+					$('input[id=reportfile]').change(function() {  
+						$('#photoCover').val($(this).val());  
+					});  
+					
+					$('#uploadreport').click(function(){
+						alert($('#photoCover').val())
+						//begin
+						var form_data = new FormData();
+						var file_info =$('#reportfile')[0].files[0];
+						form_data.append('file',file_info);
+						$.ajax({
+								url:'/uploadreport',
+								type:'POST',
+								data: form_data,
+								processData: false,  // tell jquery not to process the data
+								contentType: false, // tell jquery not to set contentType
+								success: function(report) {
+
+									alert('upload report file succ:'+report)
+								},
+								error: function(xhr,status,errMsg){
+									//alert(data)
+									alert("upload report file  fail");
+									alert(status)
+									alert(errMsg)
+								}
+							//end
+						})
+					})
+				</script> 
+				
+			  </div>
+			  <div class="input-group-append">
+				<!-- <input class="input-group-text" id="" type="submit" value="Upload"></input> -->
+			  </div>
+			</div>
+		  </div>
+		 
+		</fieldset>
+		</form> 
+      </div>
+ 
+      <!-- 模态框底部 -->
+      <div class="modal-footer">
+	    <!-- <input class="input-group-text" id="" type="submit" value="Upload"></input> -->
+		<!-- <input type="submit" class="btn btn-success"></input> -->
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
+      </div>
+	
+    </div>
+  </div>
+</div>
+<!-- 模态框end -->
 	
 </body>
 </html>
