全新的报告页面
v1

--- a/polls/templates/login.html
+++ b/polls/templates/login.html
@@ -85,7 +85,7 @@
 					
 					<div class="col-md-12 col-md-offset-0 text-center menu-1">
 						<ul>
-							<li class="active"><a href="#">首页</a></li>
+							<li class="active"><a href="/loginsucc">首页</a></li>
 							<li><a href="#">论坛</a></li>
 							<li class="has-dropdown">
 								<a href="#">报告</a>
