--- a/polls/templates/blog.html
+++ b/polls/templates/blog.html
@@ -192,16 +192,16 @@ body{background-color:#EFEFEF}
 	<!-- <div class="alert alert-light"> -->
 	<ul class="nav  nav-tabs justify-content-left" style="border-bottom:0px">
 		<li class="nav-item">
-			<a class="nav-link " href="/blog/?pg=1&searchval=">首页</a>
+			<a class="nav-link " href="/loginsucc">首页</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="/didi">论坛</a>
+			<a class="nav-link" href="/blog/?pg=1&searchval=">论坛</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link "  href="/publish">发布</a>
 		</li>
 		<li class="nav-item">
-			<a class="nav-link" href="#">下载</a>
+			<a class="nav-link" href="/didi">下载</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" href="#">关于</a>
@@ -224,7 +224,7 @@ body{background-color:#EFEFEF}
 			
 			{% for blog in Blogs %}
 			<div class="alert alert-light">
-				<h3 class="text-center">{{blog.blogtitle}}</h3>
+				<h5 class="text-center">{{blog.blogtitle}}</h5>
 				<h6 class="text-center"><small>作者：<span class="text-info">大智若愚</span> • {{blog.blogdate|date:"Y-m-d H:i:s"}}</small></h6>
 				<div  class="alert alert-light" style="border:0px;height:180px;overflow:hidden" id="testblog111" >
 						<p class="{{blog.id}}" ></p>
