--- a/polls/templates/loginsucc.html
+++ b/polls/templates/loginsucc.html
@@ -144,7 +144,7 @@
 					<div class="services">
 						<a href="/report" class="img-holder"><img class="img-responsive" src="/static/thirdparty/ft5_79_church/images/img-1.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
 						<div class="desc">
-							<h3 class="font-weight-bold" ><a href="/report"><b>运维报告平台</b></a></h3>
+							<h3 class="font-weight-bold" ><a href="/report"><b>运维平台</b></a></h3>
 							<p>基础设施运维、IT运维，内容涉及电力，暖通，消防，网络等.</p>
 							<a href="/report">Read More <i class="icon-arrow-right3"></i></a>
 						</div>
